--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" language="javascript" src="whitney.json"></script>
+    <script type="text/javascript" language="javascript" src="club-path.json"></script>
     
     <script type="text/javascript">
         $.getJSON("whitney.json", function (data) {
